--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,16 @@
-<h3>Home</h3>
-<% @users.each do |user| %>
-  <p>User: <%=link_to user.name, user %></p>
-<% end %>
+<div class="page-header">
+  <%if current_user.try(:admin?)%>
+    <%= link_to new_film_path, :class => 'btn btn-primary' do %>
+      <span class="glyphicon glyphicon-plus"></span>
+      New Film
+    <% end %>
+  <%end%>
+  <h1>Films</h1>
+</div>
+<div class="row films-list2">
+  <% @films.each do |f|%>
+    <div class="col-md-4"><%=link_to image_tag(f.image_url), f%></div>
+    <%end%>
+</div>
+<%= paginate @films, theme: 'bootstrap'%>
+
