--- a/app/assets/stylesheets/films.css.scss
+++ b/app/assets/stylesheets/films.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the films controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.films-list{
+  img{
+    height: 200px;
+    margin-bottom: 10px;
+  }
+  .col-md-2{
+    margin:auto;
+    margin-bottom:10px;
+  }
+}
+
+.films-list2{
+  img{
+    height: 400px;
+    margin-bottom: 10px;
+  }
+}
