--- a/app/views/films/edit.html.erb
+++ b/app/views/films/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing film</h1>
+<div class="page-header">
+  <%= link_to films_path, :class => 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Back
+  <% end %>
+  <%= link_to @film, :class => 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-info-sign"></span>
+    Show
+  <% end %>
+  <h1>Editing film</h1>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @film %> |
-<%= link_to 'Back', films_path %>
