--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -1,35 +1,46 @@
-<h1>Listing films</h1>
+<div class="page-header">
+  <%= link_to new_film_path, :class => 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-plus"></span>
+    New Film
+  <% end %>
+  <h1>Listing films</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Year</th>
-      <th>Genre</th>
-      <th>Ratings</th>
-      <th>Discription</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @films.each do |film| %>
+<div class="table-responsive">
+  <table class="table table-striped table-bordered table-hover">
+    <thead>
       <tr>
-        <td><%= film.title %></td>
-        <td><%= film.year %></td>
-        <td><%= film.genre_id %></td>
-        <td><%= film.ratings %></td>
-        <td><%= film.discription %></td>
-        <td><%= link_to 'Show', film %></td>
+            <th>Poster</th>
+            <th>Title</th>
+            <th>Year</th>
+            <th>Genre</th>
+            <th>Ratings</th>
+            <th>Discription</th>
+            <th></th>
+        <th></th>
+        <th></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <%= content_tag_for(:tr, @films) do |film| %>
+            <td><%= image_tag(film.image_url)%>
+            <td><%= film.title %></td>
+            <td><%= film.year %></td>
+            <td><%= film.genre_id %></td>
+            <td><%= film.ratings %></td>
+            <td><%= film.discription %></td>
+            <td><%= link_to 'Show', film %></td>
         <td><%= link_to 'Edit', edit_film_path(film) %></td>
         <td><%= link_to 'Destroy', film, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
-<br>
-
-<%= link_to 'New Film', new_film_path %>
+<% form_tag films_path, :method => 'get' do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :title => nil %>
+  </p>
+<% end %> 
