--- a/app/views/films/new.html.erb
+++ b/app/views/films/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New film</h1>
+<div class="page-header">
+  <%= link_to films_path, :class => 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Back
+  <% end %>
+  <h1>New film</h1>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', films_path %>
