--- a/app/views/genres/_form.html.erb
+++ b/app/views/genres/_form.html.erb
@@ -1,11 +1,26 @@
-<%= simple_form_for(@genre) do |f| %>
-  <%= f.error_notification %>
+<%= form_for(@genre, :html => { :class => "form-horizontal" }) do |f| %>
+  <% if @genre.errors.any? %>
+    <div class="alert alert-danger alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <h4><%= pluralize(@genre.errors.count, "error") %> prohibited this genre from being saved:</h4>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
+      <ul>
+      <% @genre.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="form-group">
+    <%= f.label :name, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_field :name, :class => "form-control" %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit :class => "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
