--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,9 +1,17 @@
-<p id="notice"><%= notice %></p>
+<div class="page-header">
+  <%= link_to genres_path, :class => 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Back
+  <% end %>
+  <%= link_to edit_genre_path(@genre), :class => 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-pencil"></span>
+    Edit
+  <% end %>
+  <h1><%= @genre.name%> Films</h1>
+</div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @genre.name %>
-</p>
-
-<%= link_to 'Edit', edit_genre_path(@genre) %> |
-<%= link_to 'Back', genres_path %>
+<dl class="dl-horizontal">
+  <% @genre.films.each do |f|%>
+    <%= link_to f.title, f%><br>
+  <%end%>
+</dl>
