--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Wathclist" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Wathclist" %>">
-    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-    <%= csrf_meta_tags %>
-  </head>
-  <body>
-    <header>
-      <%= render 'layouts/navigation' %>
-    </header>
-    <main role="main">
-       <%= render 'layouts/messages' %>
-       <%= yield %>
-    </main>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Movies watch list</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <%= javascript_include_tag "https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js", "https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js" %>
+  <![endif]-->
+
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to "Movies Wathc List", root_path, :class => "navbar-brand" %>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><%= link_to "Genres", genres_path%></li>
+          <li><%= link_to "TOP", most_popular_path%></li>
+          <% if user_signed_in? %>
+          <li><%= link_to "My films", selected_films_path%></li>
+          <li><%= link_to "Log out", destroy_user_session_path, :method => :delete%></li>
+        <%else%>
+          <li><%= link_to "Log in", new_session_path(:user)%></li>
+          <li><%= link_to "Registration", new_registration_path(:user)%></li>
+        <%end%>
+        </ul>
+        <form name ="input" action="/search" class="navbar-form navbar-right" role="search">
+          <div class="form-group">
+            <input type="text" name="search" class="form-control" value="<%=params[:search]%>" placeholder="Search film">
+          </div>
+          <button type="submit" class="btn btn-default">Search</button>
+        </form>
+        <form class="navbar-form navbar-right">
+          <div class="btn-group">
+            <%=link_to "Ukr", {locale: "uk"}, class: "btn btn-default #{I18n.locale.to_s == 'uk' ? 'btn-success' : ''}"%>
+            <%=link_to "Eng", {locale: "en"}, class: "btn btn-default #{I18n.locale.to_s == 'en' ? 'btn-success' : ''}"%>
+          </div>
+        </form>      
+      </div>
+    </div>
+  </div>
+  <div class="container main-container">
+      <% flash.each do |name, msg| %>
+      <%= content_tag :div, :class => "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable" do %>
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <%= msg %>
+      <% end %>
+    <% end %>
+
+    <%= yield %>
+  </div>
+</body>
 </html>
